* Update ember.js to 1.5.1 * Added option to hide welcome screen on start up * Added dynamic forms that user can fill out for commands using 'form' keyword * Dynamic forms for commands with missing arguments

--- a/web/clira/templates/welcome.hbs
+++ b/web/clira/templates/welcome.hbs
@@ -7,4 +7,5 @@ To view this welcome screen, use <i><b>show welcome screen</b></i> command</p>
   <p>More details can be found on the project home page at 
 <a href="https://github.com/juniper/juise" target="_blank">
 https://github.com/juniper/juise</a></p>
+  {{view Clira.WelcomeCheck checkedBinding="this"}} <i>Do not show this on startup</i>
 </script>
