Define error class in styles

--- a/web/css/clira.css
+++ b/web/css/clira.css
@@ -23,6 +23,10 @@
     font-size: 70%;
 }
 
+.error {
+    color: #FF0000;
+}
+
 div.text, div.decoration, div.default, div.header-line {
     color: #505050;
     font-family: monospace;
