* Fix Makefile.am issue * Fix issue with loading text config * Change pastebox font to fixed width

--- a/web/clira/templates/configuration.hbs
+++ b/web/clira/templates/configuration.hbs
@@ -4,6 +4,7 @@
         padding-top: 15px;
     }
     #pastebox {
+        font-family: 'courier new';
         height: 150px;
         width: 100%;
     }
