--- a/web/apps/welcome/welcome.hbs
+++ b/web/apps/welcome/welcome.hbs
@@ -5,7 +5,7 @@
 in the above input box and press <i>Enter</i> button. <br/>
 To view this welcome screen, use <i><b>show welcome screen</b></i> command</p>
   <p>More details can be found on the project home page at 
-<a href="https://github.com/juniper/juise" target="_blank">
-https://github.com/juniper/juise</a></p>
+<a href="https://github.com/Juniper/juise/wiki/CLIRA" target="_blank">
+https://github.com/Juniper/juise/wiki/CLIRA</a></p>
   {{view Clira.WelcomeCheck checkedBinding="this"}} <i>Do not show this on startup</i>
 </script>
