--- a/web/css/clira.css
+++ b/web/css/clira.css
@@ -522,6 +522,7 @@ input.text-entry {
     border: 0;
     outline: 0;
     height: 20px;
+    padding-left: 5px;
     width: 100%;
 }
 
@@ -895,10 +896,11 @@ some.day {
 }
 
 .ui-autocomplete {
+    box-sizing: content-box;
     max-height: 400px;
     overflow-y: auto;
     overflow-x: hidden;
-    padding-right: 20px;
+    padding: 0px;
     width: 650px;
 }
 
